--- a/src/Npgsql.GeoQuery/Npgsql.GeoQuery.csproj
+++ b/src/Npgsql.GeoQuery/Npgsql.GeoQuery.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<LangVersion>11</LangVersion>
 		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
